--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -9,6 +9,20 @@
 		<script defer src="js/app.js"></script>
 	</head>
 	<body class="app-background">
+		<section class="choose-sign">
+			<p>Pick Player 1's Mark</p>
+			<div class="choose-sign-inside">
+				<div class="choose-x" id="choose-x">
+					<p>X</p>
+				</div>
+				<div class="choose-o" id="choose-o">
+					<p>O</p>
+				</div>
+			</div>
+		</section>
+		<section class="new-game">
+			<p>New Game (VS Player)</p>
+		</section>
 		<main class="whole-board">
 			<header class="header">
 				<section class="whos-turn">
