NewGame Screen Beginning

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -12,18 +12,18 @@
 		<section class="choose-sign">
 			<p>Pick Player 1's Mark</p>
 			<div class="choose-sign-inside">
-				<div class="choose-x" id="choose-x">
+				<div class="choose-x" id="chooseX">
 					<p>X</p>
 				</div>
-				<div class="choose-o" id="choose-o">
+				<div class="choose-o" id="chooseO">
 					<p>O</p>
 				</div>
 			</div>
 		</section>
-		<section class="new-game">
+		<section class="new-game" id="newGame">
 			<p>New Game (VS Player)</p>
 		</section>
-		<main class="whole-board">
+		<main class="whole-board" id="wholeBoard">
 			<header class="header">
 				<section class="whos-turn">
 					<span class="sign">X</span>
